# Noir-playground-client

./: Cargo.toml
contracts/: Scarb.toml
src/: main.rs
