[package]
name = "noir_starknet_client"
version = "0.1.0"
edition = "2021"

[dependencies]
openrpc-testgen = { git = "https://github.com/neotheprogramist/starknet-hive.git", rev = "0741ae5f2cd73519931ec020a7b77e5420a6e0c4" }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = "0.13.0"
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "3ee4325a72481e526b7c4fa0592ad822a391658b" }
tokio = { version = "1", features = ["full"] }
